[package]
name = "twitter-api"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
hmac.workspace = true
sha1.workspace = true
base64.workspace = true
rand.workspace = true
chrono.workspace = true
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
